2006-01-12  ------ omnetpp-3.2p1 released ------

2006-01-10  Andras Varga

	* platdep/time.h, platdep/socket.h: made it possible to choose between
	winsock.h and winsock2.h

2005-10-27  Andras Varga

	* csimul.h: setSimTime() added (internal use only!), needed for SystemC
	integration support

2005-10-19  ------ omnetpp-3.2 released ------

2005-10-09  Andras Varga

	* cpar.h: added conversion to/from short and unsigned short [patch 
	from Omer Sinan Kaya]

2005-09-15  Andras Varga

	* csimplemodule.h: added method cancelAndDelete(cMessage *msg), 
	for use in simple module destructors.

2005-09-14  Andras Varga

	* cpolymorphic.h, cobject.h, etc: dup() moved up to cPolymorphic, and 
	return type changed to cPolymorphic. Once we drop MSVC 6.0 support,
	return types can be changed to class itself, i.e. in class Foo it can
	be defined as Foo *dup(). Unfortunately MSVC 6.0 doesn't support this.

	* cmodule.h, csimplemodule.h, ctypes.h, macros.h: signature of module
	constructors simplified, from
	    cModule(const char *name, cModule *parent) and
	    cSimpleModule(const char *name, cModule *parent, unsigned stack)
	to
	    cModule() and
	    cSimpleModule(unsigned stack=0)
	The purpose is to ease writing constructors, e.g. for a handleMessage()
	module class "PacketSink : public cSimpleModule", the constructor is
	just
	    PacketSink() {}
	instead of the former
	    PacketSink(const char *name, cModule *parent) :
	       cSimpleModule(name, parent, 0) {}

	Backwards compatibility: module classes using Module_Class_Members()
	(95%) are not affected. For module classes using hand-coded
	constructors, adding NULL as a default value to the "name" and "parent"
	ctor arguments will make the class work with both OMNeT++ 3.2 and
	earlier versions:
	    PacketSink(const char *name=NULL, cModule *parent=NULL) :
	       cSimpleModule(name, parent, 0) {}
	This affects very few modules, e.g. two in the current INET Framework
	release.
