@@ -1,3 +1,7 @@
+2006-02-27  Andras Varga
+
+	* cenvir.h: added getParsimProcId() and getParsimNumPartitions()
+
 2006-01-12  ------ omnetpp-3.2p1 released ------
 
 2006-01-10  Andras Varga
